<resources>
    <string name="app_name">Meal Tracker</string>
    <string name="add_dish">Add Dish</string>
    <string name="dish_name">Dish Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="total_sales">Total Sales</string>
    <string name="summary">Summary</string>
    <string name="view_summary">View Summary</string>
    <string name="save">Save</string>
</resources>